@startuml
class ReflectionAndRefinementState {
  +input: str
  +chat_history: List
  +intermediate_steps: List
  +reflections: List
  +refinements: List
  +agent_outcome: Any
}

class ReflectionAndRefinementAgent {
  -tools: List
  -llm: Any
  -reflection_llm: Any
  -refinement_llm: Any
  -max_refinement_iterations: int
  
  +__init__(llm_configs, tools, memory, memory_config)
  +build_graph(): None
  -_run_agent_llm(state): Dict
  -_execute_tools(state): Dict
  -_reflect(state): Dict
  -_refine(state): Dict
  -_should_execute_tools(state): bool
  -_should_reflect(state): bool
  -_should_refine(state): bool
  -_generate_reflection(intermediate_steps): str
  -_generate_refinement(reflection): str
  +run(input_text): Dict
}

class BaseAgent {
}

ReflectionAndRefinementAgent --|> BaseAgent
ReflectionAndRefinementAgent -- ReflectionAndRefinementState

note right of ReflectionAndRefinementAgent
  Implements Reflection and Refinement pattern
  which combines reflection with active
  refinement of approach and strategies
end note
@enduml